// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`merging different bookmark configs together mergedBookmark should return merged bookmarks with default label and description 1`] = `
{
  "description": "Multiple bookmarks merged",
  "folders": [
    {
      "description": "These are sample bookmarks to teach you how Bookworms works",
      "folders": [
        {
          "description": "This is to describe the folder structure",
          "folders": [
            {
              "bookmarks": [
                {
                  "description": "this is used to describe the bookmark",
                  "href": "https://www.mywebsite.com",
                  "label": "sample url 1",
                },
              ],
              "description": "This is to describe the sub folder structure",
              "label": "sub folder 1",
            },
          ],
          "label": "folder 1",
        },
        {
          "folders": [
            {
              "bookmarks": [
                {
                  "description": "this is used to describe the bookmark",
                  "href": "https://www.mywebsite.com",
                  "label": "sample url 2",
                },
                {
                  "description": "this is used to describe the bookmark",
                  "href": "https://www.mywebsite.com",
                  "label": "sample url 3",
                },
              ],
              "label": "sub folder 2",
            },
            {
              "bookmarks": [
                {
                  "description": "this is used to describe the bookmark",
                  "href": "https://www.mywebsite.com",
                  "label": "sample url 4",
                },
                {
                  "description": "this is used to describe the bookmark",
                  "href": "https://www.mywebsite.com",
                  "label": "sample url 5",
                },
              ],
              "label": "sub folder 3",
            },
          ],
          "label": "folder 2",
        },
      ],
      "label": "Bookworms",
    },
    {
      "description": "These are sample bookmarks to merge with bookmarks.yaml",
      "folders": [
        {
          "description": "This is to describe the folder structure",
          "folders": [
            {
              "bookmarks": [
                {
                  "description": "this is used to describe the bookmark",
                  "href": "https://www.mywebsite.com",
                  "label": "sample url 1",
                },
              ],
              "description": "This is to describe the sub folder structure",
              "label": "sub folder 1",
            },
          ],
          "label": "folder 3",
        },
      ],
      "label": "Bookworms for merging",
    },
  ],
  "label": "Merged worms",
}
`;

exports[`merging different bookmark configs together mergedBookmark should return merged bookmarks with set label and description 1`] = `
{
  "description": "merging different YAML files",
  "folders": [
    {
      "description": "These are sample bookmarks to teach you how Bookworms works",
      "folders": [
        {
          "description": "This is to describe the folder structure",
          "folders": [
            {
              "bookmarks": [
                {
                  "description": "this is used to describe the bookmark",
                  "href": "https://www.mywebsite.com",
                  "label": "sample url 1",
                },
              ],
              "description": "This is to describe the sub folder structure",
              "label": "sub folder 1",
            },
          ],
          "label": "folder 1",
        },
        {
          "folders": [
            {
              "bookmarks": [
                {
                  "description": "this is used to describe the bookmark",
                  "href": "https://www.mywebsite.com",
                  "label": "sample url 2",
                },
                {
                  "description": "this is used to describe the bookmark",
                  "href": "https://www.mywebsite.com",
                  "label": "sample url 3",
                },
              ],
              "label": "sub folder 2",
            },
            {
              "bookmarks": [
                {
                  "description": "this is used to describe the bookmark",
                  "href": "https://www.mywebsite.com",
                  "label": "sample url 4",
                },
                {
                  "description": "this is used to describe the bookmark",
                  "href": "https://www.mywebsite.com",
                  "label": "sample url 5",
                },
              ],
              "label": "sub folder 3",
            },
          ],
          "label": "folder 2",
        },
      ],
      "label": "Bookworms",
    },
    {
      "description": "These are sample bookmarks to merge with bookmarks.yaml",
      "folders": [
        {
          "description": "This is to describe the folder structure",
          "folders": [
            {
              "bookmarks": [
                {
                  "description": "this is used to describe the bookmark",
                  "href": "https://www.mywebsite.com",
                  "label": "sample url 1",
                },
              ],
              "description": "This is to describe the sub folder structure",
              "label": "sub folder 1",
            },
          ],
          "label": "folder 3",
        },
      ],
      "label": "Bookworms for merging",
    },
  ],
  "label": "All my bookmarks",
}
`;
